[project]
name = "context-mcp"
version = "0.1.0"
description = "A modular context manager MCP server using Jinja2 for prompt generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.10.1",]
[[project.authors]]
name = "Patrick"
email = "patchen0518@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
context-mcp = "context_mcp:main"
